--- a/index.html
+++ b/index.html
@@ -30,18 +30,14 @@
                    <div class="right">
                        <i class="far fa-bookmark fa-lg"></i>
                    </div>
-                </div>
+               </div>
                <div class="description">
                    <p>
-                       
+                     Liked by <strong>4 Geeks Academy, html5, Web</strong> and <strong>100,000 others</strong>
                    </p>
-
                    <p>
-                       
-                   </p>
-
+                       Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euisdom tincidunt ut laoreet dolore magna aliquam erat volupat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
                </div>
-
            </div>
        </div>
 
