--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                </div>     
            </div>
            <div class="boxcenter"> 
-               <img src="https://wallpaperaccess.com/full/459026.jpg">  
+               <img class="image" src="https://wallpaperaccess.com/full/459026.jpg">  
            </div>
            <div class="boxfooter">
                <div class="controls">
