--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                </div>     
            </div>
            <div class="boxcenter"> 
-               <img class="image" src="https://wallpaperaccess.com/full/459026.jpg">  
+               <img class="image" src="https://static.cargurus.com/images/site/2016/05/21/19/45/2016_volkswagen_gti_autobahn-pic-2616293000348713230-640x480.jpeg">  
            </div>
            <div class="boxfooter">
                <div class="controls">
